--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'jacoco'
     id 'maven-publish'
+    id 'java-library'
 
-    id 'io.micronaut.library' version '1.0.3'
     id 'org.sonarqube' version '3.0'
     id 'com.diffplug.gradle.spotless' version '4.4.0'
 }
@@ -35,29 +35,12 @@ configurations {
     }
 }
 
-micronaut {
-    version '2.1.1'
-    processing {
-        incremental true
-        module project.name
-        group project.group
-        annotations 'micronaut.library.*'
-    }
-}
-
 dependencies {
-    annotationProcessor 'io.micronaut:micronaut-inject-java'
+    implementation 'org.jetbrains:annotations:20.1.0'
 
-    implementation 'io.micronaut:micronaut-runtime'
-
-    testAnnotationProcessor 'io.micronaut:micronaut-inject-java'
-
-    testImplementation 'io.micronaut.test:micronaut-test-core'
-    testImplementation 'io.micronaut.test:micronaut-test-junit5'
-
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params'
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiterVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiterVersion"
 }
 
 test {
@@ -66,10 +49,6 @@ test {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
     }
-
-    environment([
-            "USE_INTEGRATION_TESTS"   : "$integrationTestsEnabled",
-    ])
 }
 
 tasks.withType(JavaCompile) {
