--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-groupId=micronaut.template
-artifactId=micronaut-library-template
+groupId=io.test.assigment
+artifactId=graph-library
 artifactVersion=1.0.0-SNAPSHOT
 buildNumber=1
 
@@ -12,8 +12,5 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 
 
-##### TESTS #####
-integrationTestsEnabled=true
-
-
-##### FRAMEWORKS #####
+##### FRAMEWORK
+jupiterVersion=5.7.0
